--- a/src/components/Main/main.style.css
+++ b/src/components/Main/main.style.css
@@ -1,3 +1,34 @@
 .main {
-  background-color: skyblue;
+  padding: 30px 50px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.main h1{
+  text-align: left;
+  font-weight: 600;
+  color: rgb(75, 72, 72);
+}
+
+/* #tab-poz {
+  display: flex;
+  flex-direction: row;
+  top: 500px;
+} */
+
+
+.cardPosition {
+  display: flex;
+  justify-content: space-evenly;
+  
+}
+
+@media (max-width: 600px){
+  .main {
+    padding: 10px;
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+  .cardPosition {
+    display: flex;
+    flex-direction: column;
+  }
 }
